Added Bootstrap basic design to dashboard.

--- a/Assets/html/dashboard.html
+++ b/Assets/html/dashboard.html
@@ -1,8 +1,32 @@
 <html>
     <head>
+        <!-- Styling -->
+        <link rel="stylesheet" href="Assets/css/bootstrap.css">
         <link rel="stylesheet" href="Assets/css/main.css">
     </head>
     <body>
         <h1>Willkommen bei KiBa.</h1>
+
+        <div class="row">
+            <div class="col-xs-4 align-center">
+                <h3>Einnahmen</h3>
+                <a class="btn btn-primary">Details <span class="glyphicon glyphicon-arrow-right"></span> </a>
+            </div>
+            <div class="col-xs-4 align-center">
+                <h3>Verhältnis</h3>
+                <a class="btn btn-primary">Details <span class="glyphicon glyphicon-arrow-right"></span> </a>
+            </div>
+            <div class="col-xs-4 align-center">
+                <h3>Ausgaben</h3>
+                <a class="btn btn-primary">Details <span class="glyphicon glyphicon-arrow-right"></span> </a>
+            </div>
+        </div>
+
+        <img class="kiba" src="Assets/img/glas.png" width="200" height="200" alt="Ein Glas Kiba.">
+
+        <!-- Java Script -->
+        <script src="Assets/js/jquery-1.10.2.min.js"></script>
+        <script src="Assets/js/bootstrap.min.js"></script>
+        <script src="Assets/js/general.js"></script>
     </body>
 </html>
