--- a/Assets/html/dashboard.html
+++ b/Assets/html/dashboard.html
@@ -7,21 +7,23 @@
     <body>
         <h1>Willkommen bei KiBa.</h1>
 
-        <div class="row">
-            <div class="col-xs-4 align-center">
-                <h3>Einnahmen</h3>
-                <div id="income" class="chart"></div>
-                <a class="btn btn-primary">Details <span class="glyphicon glyphicon-arrow-right"></span> </a>
-            </div>
-            <div class="col-xs-4 align-center">
-                <h3>Verhältnis</h3>
-                <div id="proportion" class="chart"></div>
-                <a class="btn btn-primary">Details <span class="glyphicon glyphicon-arrow-right"></span> </a>
-            </div>
-            <div class="col-xs-4 align-center">
-                <h3>Ausgaben</h3>
-                <div id="expenditure" class="chart"></div>
-                <a class="btn btn-primary">Details <span class="glyphicon glyphicon-arrow-right"></span> </a>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-4 col-sm-4 align-center">
+                    <h3>Einnahmen</h3>
+                    <div id="income" class="chart"></div>
+                    <a class="btn btn-primary">Details <span class="glyphicon glyphicon-arrow-right"></span> </a>
+                </div>
+                <div class="col-xs-4 col-sm-4 align-center">
+                    <h3>Verhältnis</h3>
+                    <div id="proportion" class="chart"></div>
+                    <a class="btn btn-primary">Details <span class="glyphicon glyphicon-arrow-right"></span> </a>
+                </div>
+                <div class="col-xs-4 col-sm-4 align-center">
+                    <h3>Ausgaben</h3>
+                    <div id="expenditure" class="chart"></div>
+                    <a class="btn btn-primary">Details <span class="glyphicon glyphicon-arrow-right"></span> </a>
+                </div>
             </div>
         </div>
 
