Method to connect dashboard with app logic - closes #30.

--- a/Assets/html/dashboard.html
+++ b/Assets/html/dashboard.html
@@ -12,17 +12,17 @@
                 <div class="col-xs-4 col-sm-4 align-center">
                     <h3>Einnahmen</h3>
                     <div id="income" class="chart"></div>
-                    <a class="btn btn-primary">Details <span class="glyphicon glyphicon-arrow-right"></span> </a>
+                    <a class="btn btn-primary" href="income">Details <span class="glyphicon glyphicon-arrow-right"></span> </a>
                 </div>
                 <div class="col-xs-4 col-sm-4 align-center">
                     <h3>Verhältnis</h3>
                     <div id="proportion" class="chart"></div>
-                    <a class="btn btn-primary">Details <span class="glyphicon glyphicon-arrow-right"></span> </a>
+                    <a class="btn btn-primary" href="proportion">Details <span class="glyphicon glyphicon-arrow-right"></span> </a>
                 </div>
                 <div class="col-xs-4 col-sm-4 align-center">
                     <h3>Ausgaben</h3>
                     <div id="expenditure" class="chart"></div>
-                    <a class="btn btn-primary">Details <span class="glyphicon glyphicon-arrow-right"></span> </a>
+                    <a class="btn btn-primary" href="bla">Details <span class="glyphicon glyphicon-arrow-right"></span> </a>
                 </div>
             </div>
         </div>
